--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,15 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@imagekit/nodejs": "^7.3.0",
+    "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.0",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11"
   }
 }
